# PythonSetup

./: .gitignore  README.md  poetry.toml  pyproject.toml  scripts.py
.github/workflows/: pr-check.yml
integration_tests/: test_all.py
myproject/: main.py  test_main.py
